@@ -22,7 +22,7 @@
 #dbsToTest=timesten
 
 dbsToTest=postgres, oracle, db2, derby, h2, informix, mysql4, mysql5, mssql, sybase, firebird
-#dbsToTest=derby
+
 
 # All dbs that I have setups for
 #dbsToTest=axion, daffodil, db2, derby, firebird, frontbase, h2, hsqldb, informix, ingres, maxdb, mckoi, mssql, mysql, oracle, pointbase, postgres, sybase 
